--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <h2><i>My Profile page</ii></h2>
     <a href="https://gokul-sami.github.io/profiles/profile.html">
         profile page
-    </a>
-    <br>
+    </a><br>
     <img src="profile_page.PNG" height="400">
     <hr>
     <h2><i>Car Game</ii></h2>
     <a href="https://github.com/Gokul-sami/2d_car_game">car game</a>
-    <br><img src="car game snip.PNG" height="500">
+    <br>
+    <img src="car game snip.PNG" height="500">
     <hr>
     <h1>Contact me</h1>
     <a href="contact.html">Contact page</a>
