--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>portfolio page</title>
 </head>
-<body style="background-color:violet; color: rgb(5, 4, 4);">
+<body style="background-image: linear-gradient(to bottom right,violet,cyan,lightgreen); color: rgb(5, 4, 4);">
     <center>
     <h1 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
         <b><i>Gokul Sami's portfolio</i></b></h1>
