--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
     <h1 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
         <b><i>Gokul Sami's portfolio</i></b></h1>
     <hr>
-    <h2><i>My Profile page</ii></h2>
+    <h2><i>My Profile page</i></h2>
     <a href="https://gokul-sami.github.io/profiles/profile.html">
         profile page
-    </a><br>
-    <img src="profile_page.PNG" height="400">
+    </a>
+    <img src="profile_page.PNG" height="300">
     <hr>
-    <h2><i>Car Game</ii></h2>
+    <h2><i>Car Game</i></h2>
     <a href="https://github.com/Gokul-sami/2d_car_game">car game</a>
-    <br>
-    <img src="car game snip.PNG" height="500">
+    <br><img src="car game snip.PNG" height="400">
+    <hr>
+    <h2>CSS in HTML</h2>
+    <a href="https://gokul-sami.github.io/CSS-in-HTML/">css in html</a>
+    <img src="css_in_html.PNG" height="300">
     <hr>
     <h1>Contact me</h1>
     <a href="contact.html">Contact page</a>
